WIP MIFOS-5157 Minor clean-ups, plus new mifos.l4j.ini (TBD: dist/build)